# apiman

./: .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  pytest.ini  setup.py
.github/workflows/: test.yml
apiman/: base.py  bottle.py  django.py  falcon.py  flask.py  openapi.py  starlette.py  tornado.py
apiman/static/: redoc.html  swagger.html  template.yaml
examples/: _bottle.py  _falcon.py  _flask.py  _starlette.py  _tornado.py  catstore.py  dogstore.py
examples/_django/fish/: asgi.py  settings.py  test.py  views.py  wsgi.py
examples/docs/: cat_template.yml  cats_get.yml  cats_post.json  dog_template.yml  dogs_get.yml  dogs_post.json
examples/fish/: manage.py
examples/fish/fish/: test.py  urls.py  views.py
stagger/: __init__.py  endpoints.py  generators.py
starchart/: __init__.py  endpoints.py  extensions.py  generators.py
starchart/static/: index.html  redoc_index.html  swagger_index.html
tests/: test_examples.py
